--- a/package.json
+++ b/package.json
@@ -11,17 +11,31 @@
   "dependencies": {
     "@react-navigation/native-stack": "^7.3.26",
     "expo": "~53.0.22",
+    "expo-router": "~5.1.5",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.2.1",
     "nativewind": "^4.1.23",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.0.0",
-    "react-native": "0.79.6",
-    "tailwindcss": "^3.4.17"
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-web": "^0.20.0",
+    "tailwindcss": "^3.4.17",
+    "expo-linking": "~7.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
+  },
+  "expo": {
+    "extra": {
+      "router": {
+        "root": "app"
+      }
+    }
   },
   "private": true
 }
