--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-navigation/native-stack": "^7.3.26",
-    "expo": "~53.0.22",
+    "expo": "53.0.22",
     "expo-router": "~5.1.5",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.2.1",
@@ -23,7 +23,10 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.4.17",
-    "expo-linking": "~7.1.7"
+    "expo-linking": "~7.1.7",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-blur": "~14.1.5",
+    "@expo/vector-icons": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
