--- a/package.json
+++ b/package.json
@@ -6,15 +6,24 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "dev": "react-native start"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@react-navigation/native-stack": "^7.3.26",
+    "cors": "^2.8.5",
     "expo": "53.0.22",
+    "expo-blur": "~14.1.5",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.7",
     "expo-router": "~5.1.5",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.2.1",
+    "firebase-admin": "^13.5.0",
+    "firebase-functions": "^6.4.0",
     "nativewind": "^4.1.23",
+    "nodemailer": "^7.0.6",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -22,14 +31,11 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-web": "^0.20.0",
-    "tailwindcss": "^3.4.17",
-    "expo-linking": "~7.1.7",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-blur": "~14.1.5",
-    "@expo/vector-icons": "^14.1.0"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
