--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-firebase/app": "^23.3.1",
+    "@react-native-firebase/auth": "^23.3.1",
+    "@react-native-firebase/functions": "^23.3.1",
     "@react-navigation/native-stack": "^7.3.26",
     "cors": "^2.8.5",
     "expo": "53.0.22",
@@ -22,6 +25,7 @@
     "firebase": "^12.2.1",
     "firebase-admin": "^13.5.0",
     "firebase-functions": "^6.4.0",
+    "lucide-react-native": "^0.544.0",
     "nativewind": "^4.1.23",
     "nodemailer": "^7.0.6",
     "prettier-plugin-tailwindcss": "^0.5.14",
@@ -30,6 +34,7 @@
     "react-native": "0.79.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
+    "react-native-svg": "^15.13.0",
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.4.17"
   },
