--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase": "^12.2.1",
     "firebase-admin": "^13.5.0",
     "firebase-functions": "^6.4.0",
+    "lucide-react": "^0.544.0",
     "lucide-react-native": "^0.544.0",
     "nativewind": "^4.1.23",
     "nodemailer": "^7.0.6",
@@ -32,6 +33,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-feather": "^1.1.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-svg": "^15.13.0",
