--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "cors": "^2.8.5",
     "expo": "53.0.22",
     "expo-blur": "~14.1.5",
+    "expo-device": "~7.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.5",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.2.1",
