--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "dev": "react-native start"
   },
@@ -50,7 +50,8 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.20.0",
     "tailwind-react-native-classnames": "^3.0.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
